# TensorRT_demo

./: .gitignore  CMakeLists.txt  main.cpp  sampleOnnxMNIST.cpp  self_main.cpp  syn_main.cpp
include/: logging.h  number_detection.h
model/: 2023_2_1_hj_num_2.trt  2023_2_1_hj_num_2_fp16.trt  2023_3_16_hj_num_1.trt
other/: trt_params.yaml
src/: number_detection.cpp
